# physics_sim

./: .gitignore  README.md  meson.build  physics_sim.c
.cache/clangd/index/: main.cpp.6933C0E6C8DACF01.idx
src/: logging.c  logging.h  main.c  main.cpp  shader.c  shader.h  vao.c  vao.h  vertex.c
src/shaders/: default.frag  default.vert  render.comp
subprojects/: cglm.wrap
subprojects/cglm-0.9.2/: .meson-subproject-wrap-hash.txt
